Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28613

2dpainting example prints warning "QBackingStore::flush() called with non-exposed window..."

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.1.0 RC1
    • 5.0.0 RC 2, 5.0.2
    • GUI: OpenGL
    • Qt 5.0.0 RC 2 , Opensuse 21.1 (64 bit), Mesa 7.11 driver
      Ubuntu 12.04 64-bit
    • 89f219da0c720c326c4c3aa696141e368832ee43

    Description

      Launching 2dpainting example from within qt creator prints multiple warnings:

      QBackingStore::flush() called with non-exposed window, behavior is undefined
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rodal Samuel Rødal
            kkohne Kai Köhne
            Votes:
            4 Vote for this issue
            Watchers:
            10 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes