Disable "QBackingStore::flush() called with non-exposed window" warning

This warning is pretty annoying and doesn't necessarily imply that an
application is not working properly.

Task-number: QTBUG-28613
Change-Id: Id0a2ebd91f9e4d59dce3e3e29637988d8e6175a9
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>
Reviewed-by: Gunnar Sletta <gunnar.sletta@digia.com>

cregit: 89f219da0c720c326c4c3aa696141e368832ee43 https://github.com/qt/qtbase/commit/89f219da0c720c326c4c3aa696141e368832ee43